--- a/src/AddButton.css
+++ b/src/AddButton.css
@@ -1,6 +1,24 @@
-.AddButton {
+.ButtonContainer {
+    position: relative;
+}
+
+.ActionButton {
     border-radius: 5px;
     height: 50px;
     margin: 7.5px;
     width: 100px;
+}
+
+.FloatingButtons {
+    display: none;
+    flex-direction: row;
+    position: absolute;
+    top: 7.5px;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 1;
+}
+
+.ButtonContainer:hover .FloatingButtons {
+    display: flex;
 }
