--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,20 @@
   justify-content: center;
   padding: 15px;
 }
+
+.FloatingButtons {
+  display: none;
+  flex-direction: row;
+  position: absolute;
+  top: 7.5px;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+}
+
+.ActionButton {
+  border-radius: 5px;
+  height: 50px;
+  margin: 7.5px;
+  width: 100px;
+}
